[package]
name = "uprtcl"
version = "0.1.0"
authors = ["guillem.cordoba <guillem.cordoba@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
hdk = "=0.0.48-alpha1"
hdk_proc_macros = "=0.0.48-alpha1"
holochain_wasm_utils = "=0.0.48-alpha1"
holochain_json_derive = "^0.0"
holochain_anchors = { git = "https://github.com/guillemcordoba/holochain-anchors" }
multihash = "*"
multibase = "=0.6.0"
serde_cbor = "0.10"
cid = "*"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
