[package]
name = "folder"
version = "0.1.0"
authors = ["guillem.cordoba <guillem.cordoba@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.29-alpha2" }
hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.29-alpha2" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.29-alpha2" }
holochain_json_derive = { version = "0.0.1-alpha2" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
