[package]
name = "tags"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.38-alpha14" }
hdk_proc_macros = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.38-alpha14" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.38-alpha14" }
holochain_json_derive = "=0.0.1-alpha2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
